# mlops-zoomcamp

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  mlflow.dockerfile  pyproject.toml  requirements.txt
1-intro/: 1-intro.ipynb
2-experiment-tracking/: backend.db  hpo.py  register_model.py  train.py
2-experiment-tracking/mlartifacts/2/331f0871a92a483bb0d2b21010ed5a0e/artifacts/model/: MLmodel  model.pkl
2-experiment-tracking/mlartifacts/2/5ba1b3f573ee46f5a5d6c7dcbabe2500/artifacts/model/: MLmodel
2-experiment-tracking/mlruns/0/: meta.yaml
2-experiment-tracking/mlruns/0/891ca0ba334b4b2d8afc2a459f33818f/: meta.yaml
2-experiment-tracking/mlruns/0/891ca0ba334b4b2d8afc2a459f33818f/tags/: mlflow.runName  mlflow.source.git.commit
3-experimentation/airflow/config/: airflow.cfg
3-experimentation/airflow/dags/: code.py
3-experimentation/mlflow/: backend.db
4-deployment/: Dockerfile  Pipfile  README.md  starter.ipynb  starter.py
5-monitoring/: README.md  baseline_model_nyc_taxi_data.ipynb  evidently_metrics_calculation.py
5-monitoring/dashboards/: nyc_taxi_metrics_dashboard.json
5-monitoring/data/: reference.parquet
5-monitoring/workspace/01979864-2b39-73c6-81b4-6721162eceeb/: dashboard.json  metadata.json
5-monitoring/workspace/01979864-2b39-73c6-81b4-6721162eceeb/snapshots/: 01979864-3114-776f-a5dd-f337aadfa450.json
6-best-practices/: Pipfile  README.md  batch.py
6-best-practices/integration-test/: docker-compose.yaml  integration_test.py  run.sh
6-best-practices/tests/: test_batch.py
(+9 files in other folders)
