[project]
name = "mlops-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hyperopt==0.2.7",
    "mlflow==3.0.0rc0",
    "pandas==2.1.4",
    "pyarrow==16.1.0",
    "scikit-learn==1.6.1",
    "seaborn==0.13.2",
    "xgboost==3.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
